projects/rhodes.akn/dist/apps/pocket-id/gateway.networking.k8s.io.v1beta1.ReferenceGrant.ingress-gateway-system-to-pocket-id.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway from the ingress-gateway-system namespace to access the pocket-id service
      to enable SSO access from the local network.
  labels:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
  name: ingress-gateway-system-to-pocket-id
  namespace: pocket-id
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: ingress-gateway-system
  to:
  - group: ""
    kind: Service
    name: pocket-id
