projects/rhodes.akn/dist/apps/pocket-id/gateway.networking.k8s.io.v1.HTTPRoute.pocket-id-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/zone: internal
  labels:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
  name: pocket-id-internal
  namespace: pocket-id
spec:
  hostnames:
  - auth.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: ingress-gateway-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: pocket-id
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
