projects/rhodes.akn/dist/apps/pocket-id/cilium.io.v2.CiliumNetworkPolicy.allow-pocket-id-from-ingress-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the Pocket ID application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  labels:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
  name: allow-pocket-id-from-ingress-gateway
  namespace: pocket-id
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "1411"
        protocol: TCP
