projects/rhodes.akn/dist/apps/pocket-id/cilium.io.v2.CiliumNetworkPolicy.allow-pocket-id-from-newt.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Newt to route traffic to the Pocket ID application.
  labels:
    app.kubernetes.io/instance: pocket-id
    app.kubernetes.io/name: pocket-id
  name: allow-pocket-id-from-newt
  namespace: pocket-id
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: newt
        io.kubernetes.pod.namespace: newt-system
    toPorts:
    - ports:
      - port: "1411"
        protocol: TCP
